# Marjanator

Marjanator_ROS-main/Marjanator_ROS-main/: CMakeLists.txt  README.md  package.xml
Marjanator_ROS-main/Marjanator_ROS-main/launch/: controller.launch  controller.yaml  gazebo.launch  marja_diff_drive.yaml
Marjanator_ROS-main/Marjanator_ROS-main/meshes/: Paddle_wheel_1.stl  Paddle_wheel_2_1.stl  base_link.stl
Marjanator_ROS-main/Marjanator_ROS-main/src/: cmd_sub_vel.py  remap.py  return.py  ros_marja.ino
Marjanator_ROS-main/Marjanator_ROS-main/urdf/: mar_gaz.gazebo  mar_gaz.trans  mar_gaz.xacro  materials.xacro
