<?xml version="1.0"?>
<package format="2">
  <name>mar_gaz_description</name>
  <version>0.0.0</version>
<description>The mar_gaz_description package</description>
  <maintainer email="s.akshit@iitg.ac.in">Akshit</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>


  <export>


  </export>
</package>
